Modificando o projeto para usar o Spring Boot 2.7.4